<resources>
    <string name="app_name">Voice Changer Speech Shift</string>

    <string name="record_voice">Record Audio</string>
    <string name="change_voice">Change Voice Effects</string>
    <string name="text_to_audio">Text to audio</string>
    <string name="my_voice">My Studio</string>

    <string name="text_update">Looks like you\'re using an older version,\nUpdate now for less bugs batter performance,\nand the letest features.</string>
    <string name="Download">Download</string>
    <string name="Error">Error</string>
    <string name="Go_to_setting">Go to setting</string>
    <string name="Grant_Permission">Grant Permission</string>
    <string name="Please_grant_all_permissions">Please grant all permissions to access additional functionality.</string>
    <string name="Successfully">Successfully</string>
    <string name="alarm">Alarm</string>
    <string name="alien">Alien</string>
    <string name="ghost">Ghost</string>
    <string name="cat">Cat</string>
    <string name="oldman">Oldman</string>
    <string name="women">Women</string>
    <string name="multiple">Multiple</string>
    <string name="all_effects">Change Voice</string>
    <string name="allow">Allow</string>
    <string name="are_you_sure_to_delete_this_audio">Are you sure to delete this audio?</string>
    <string name="audio_has_not_been_saved">Audio has not been saved. Are you sure want to exit now?</string>
    <string name="audio_has_not_been_saved_reset">Audio has not been saved. Are you sure want to reset now?</string>
    <string name="audio_not_saved">Audio not Saved</string>
    <string name="back_chipmunks">Back chipmunks</string>
    <string name="big_robot">Big robot</string>
    <string name="cancel">Cancel</string>
    <string name="cave">Cave</string>
    <string name="child">Child</string>
    <string name="created">Created</string>
    <string name="death">Death</string>
    <string name="delete">Delete</string>
    <string name="drunk">Drunk</string>
    <string name="english">English</string>
    <string name="enter_text_to_generate_audio">Enter text to generate audio, then add voice effects you like…</string>
    <string name="error_file">Error!</string>
    <string name="example">Example</string>
    <string name="exit">Exit</string>
    <string name="extraterrestrial">Extraterrestrial</string>
    <string name="file_name">File Name</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="grand_canyon">Grand Canyon</string>
    <string name="helium">Helium</string>
    <string name="hexafluoride">Hexafluoride</string>
    <string name="hindi">Hindi</string>
    <string name="indonesia">Indonesia</string>
    <string name="language_is_not_supported">Language is not supported</string>
    <string name="loading">Loading…</string>
    <string name="megaphone">Megaphone</string>
    <string name="monster">Monster</string>

    <string name="nervous">Nervous</string>
    <string name="next">Next</string>
    <string name="normal">Normal</string>
    <string name="notification">Notification</string>
    <string name="notification_recording">Recording…</string>
    <string name="ok">OK</string>
    <string name="other_effects">Other Effects</string>
    <string name="people_effects">People Effects</string>
    <string name="please_enter_text">Please enter text!</string>
    <string name="please_wait">Please wait…</string>
    <string name="portuguese">Portuguese</string>
    <string name="preview">Preview</string>
    <string name="rate_us">Rate us</string>
    <string name="re_record">Re-record</string>
    <string name="rename">Rename</string>
    <string name="reset">Reset</string>
    <string name="reverse">Reverse</string>
    <string name="ringtone">Ringtone</string>
    <string name="robot">Robot</string>
    <string name="robot_effects">Robot Effects</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="saving_audio">Saving audio</string>
    <string name="scary_effects">Ambient Sound</string>
    <string name="search_menu_title">Search</string>
    <string name="set">Set</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
    <string name="share">Share</string>
    <string name="share_to">Share to</string>
    <string name="small_alien">Small Alien</string>
    <string name="spanish">Spanish</string>
    <string name="squirrel">Squirrel</string>
    <string name="stop">Stop</string>
    <string name="success">Success!</string>
    <string name="successfully_saved_the_audio_file">Your Audio has been saved</string>
    <string name="telephone">Telephone</string>

    <string name="there_is_a_special_character">There is a special character in my string!</string>
    <string name="this_audio_already_exists">This audio already exists!</string>
    <string name="underwater">Underwater</string>
    <string name="villain">Villain</string>
    <string name="voice_effects">Voice Effects</string>
    <string name="we_need_permission_to_mange">We Need Permission To Mange Ringtones, Please Authorize</string>
    <string name="zombie">Zombie</string>
    <string name="voice_changer">Voice Changer</string>

    <string name="thanks_rate">Thanks For the Rating</string>
    <string name="update_now">Update Now</string>
    <string name="space_for_ads">Space for Ads</string>
    <string name="language_selected">Language Selected</string>
    <string name="it_van_not_open">It cannot open settings!</string>
    <string name="sim_not_available">\"SimCard not available \"</string>
    <string name="txtMain">Voice Changer, Voice Recorder - Supper Voice Effect</string>
    <string name="change_voice_language">Change Voice Language</string>
    <string name="set_as">Set As</string>
    <string name="start_record">Start Record</string>
    <string name="click_the_audio_icon_above_to_start_recording">Click The Audio Icon Above to Start Recording.</string>
    <string name="change_your_voice_into_different">Speech Shift</string>
    <string name="done">Done</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="allow_now">Allow Now</string>
    <string name="grantPermission">Permission Granted</string>
    <string name="welcome_to">Welcome to</string>
    <string name="cont_per">Change Your Voice, Make Fun Calls And Create Special Moments!</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="contPerDialog">You must allow Video to access photos, media and files on your device from Settings</string>
    <string name="appShare">Best app for Change Your Voice and make more fun with Friends.</string>
    <string name="exit_alert">Exit Alert !</string>
    <string name="do_you_want_to_exit_an_app">Do You Want To Exit an App?</string>
    <string name="exit_the_app">Exit the App</string>
    <string name="save">Save</string>
    <string name="please_rating_now">Please Rating Now</string>
    <string name="please_take_a_moment_to_rate_app">Please Take a Moment To Rate App</string>
    <string name="submit">Submit</string>
    <string name="whoops">Whoops!</string>
    <string name="check_your_connection_or_try_again">Check your Connection Or Try Again</string>
    <string name="wi_fi">WI-FI</string>
    <string name="data">DATA</string>
    <string name="share_app">Share App</string>
    <string name="enter_minimum_words">Please enter Minimum 3 Words</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="_00_00" translatable="false">00:00</string>
    <string name="_01_00" translatable="false">01:00</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>


</resources>