<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/bg_corner_10"
    android:backgroundTint="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtAllowText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/proxima_nova_condensed_bold"
        android:gravity="center"
        android:text="@string/allow_permission"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/proxima_nova_semibold"
        android:gravity="center"
        android:text="@string/contPerDialog"
        android:textColor="@color/grayText"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/permission_btn"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_gradient"
            android:fontFamily="@font/proxima_nova_semibold"
            android:gravity="center"
            android:text="@string/allow"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancle_btn"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:background="@drawable/bg_record"
            android:fontFamily="@font/proxima_nova_semibold"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/grayText"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>

