<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.PermissionActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_permission" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtAllow"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_semibold"
                android:text="@string/welcome_to"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:fontFamily="@font/proxima_nova_semibold"
                android:text="@string/voice_changer"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_semibold"
                android:text="@string/cont_per"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtAllow"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_gradient"
            android:fontFamily="@font/proxima_nova_semibold"
            android:gravity="center"
            android:text="@string/allow_now"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>