<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_corner_10"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        android:tag="layout/dialog_audio_not_saved_0">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/proxima_nova_semibold"
            android:text="@string/audio_not_saved"
            android:textColor="@color/black"
            android:textSize="@dimen/_19ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt1"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/proxima_nova_semibold"
            android:gravity="center"
            android:text="@string/audio_has_not_been_saved"
            android:textColor="@color/grayText"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_content"
            android:layout_marginBottom="5dp"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_weight="1"
                android:fontFamily="@font/proxima_nova_semibold"
                android:background="@drawable/bg_gradient"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_exit"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:fontFamily="@font/proxima_nova_semibold"
                android:background="@drawable/bg_record"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="@color/grayText"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>

</layout>
