<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/bg_corner_10"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgClose"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/ic_close" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_whoops" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/proxima_nova_condensed_bold"
        android:text="@string/whoops"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/proxima_nova_semibold"
        android:text="@string/check_your_connection_or_try_again"
        android:textColor="@color/grayText"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/wifi"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_record"
            android:fontFamily="@font/proxima_nova_semibold"
            android:gravity="center"
            android:text="@string/wi_fi"
            android:textColor="@color/grayText"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_record"
            android:backgroundTint="@color/colorOfflineBtn"
            android:fontFamily="@font/proxima_nova_semibold"
            android:gravity="center"
            android:text="@string/data"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>