<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/bg_corner_10"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgClose"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/ic_close" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_exit" />

    </RelativeLayout>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/exit_alert"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/proxima_nova_semibold"
        android:text="@string/do_you_want_to_exit_an_app"
        android:textColor="@color/grayText"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnExit"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/proxima_nova_semibold"
        android:background="@drawable/bg_gradient"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/exit_the_app"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>