<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp"
        android:tag="layout/dialog_permission_ringtones_0">

        <LinearLayout
            android:id="@+id/llyTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/proxima_nova_condensed_bold"
                android:gravity="center_horizontal"
                android:text="@string/set_as_ringtone"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/proxima_nova_semibold"
                android:gravity="center_horizontal"
                android:text="@string/we_need_permission_to_mange"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="normal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/llyAllow"
            android:layout_below="@+id/llyTop"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgPer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:src="@drawable/ic_permission_set_ringtone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llyAllow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:weightSum="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_cancel"
                android:fontFamily="@font/proxima_nova_semibold"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/cancel"
                android:textSize="@dimen/_12ssp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_allow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_gradient"
                android:fontFamily="@font/proxima_nova_semibold"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/allow"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</layout>
